--- a/static/html/inline-edit.html
+++ b/static/html/inline-edit.html
@@ -1,22 +1,16 @@
-<div>
+<div class="text-input">
     <div class="input-group">
-        <input type="text"
-               on-enter="save()"
-               on-esc="cancel()"
-               ng-model="model"
-               ng-show="editMode"
-               class="form-control"
-               aria-label="model"
-        style="height: 30px;">
-        <div class="input-group-btn inline">
-            <button type="button" class="btn btn-default" aria-label="Bold" ng-click="save()" ng-show="editMode" style="height: 30px;">
-                <span class="glyphicon glyphicon-ok" ></span></button>
-            <button type="button" class="btn btn-default" aria-label="Italic" ng-click="cancel()" ng-show="editMode" style="height: 30px;">
-                <span class="glyphicon glyphicon-remove"></span>
-            </button>
+        <input  type="text"
+                on-enter="save()"
+                on-esc="cancel()"
+                ng-model="model"
+                ng-show="editMode"
+                class="form-control"
+                aria-label="model">
+        <div ng-hide="editMode" ng-click="edit()" class="inline-show">
+            <span ng-hide="model != ''">інф. відсутня</span>
+            <span ng-show="model != ''">{{model}}</span>
         </div>
     </div>
-    <span ng-hide="editMode" ng-click="edit()">{{model}}</span>
-  </span>
 </div>
 
