--- a/static/html/view.html
+++ b/static/html/view.html
@@ -1,188 +1,31 @@
-<h3 class="col-xs-12">{[{ track.pl.name_and_requisits }]}</h3>
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class=" panel-heading">Назва та реквізити регуляторного акта</div>
-        <div class="panel-body" inline-edit="track.pl.name_and_requisits" on-save="saveData('SAVE', 'name_and_requisits', value)" on-cancel="log('CANCEL', value)"></div>
+<div class="clearfix">
+    <div class="edit-page">
+        <a href="edit/"><span class="glyphicon glyphicon-edit"></span></a>
+    </div>
+    <div class="view-print">
+        <a class="glyphicon glyphicon-print" ng-click="printDiv('track-view')"></a>
     </div>
 </div>
 
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-            <div class="col-xs-8 panel-heading">Реквізити реєстрації регуляторного акта в Мінюсті</div>
-            <div class="col-xs-4 panel-heading">&nbsp;</div>
-        <div class="clearfix">
-            <div class="col-xs-2 pull-left panel-body">Дата реєстрації</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.reg_date"
-                 on-save="saveData('SAVE', 'reg_date', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Номер реєстрації</div>
-            <div class="col-xs-2 pull-left panel-body" inline-edit="track.pl.id_reg_number"
-                 on-save="saveData('SAVE', 'id_reg_number', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Дата набуття чинності</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.actuality_date"
-                 on-save="saveData('SAVE', 'actuality_date', value)" on-cancel="log('CANCEL', value)"></div>
+<div class="track-view" id="track-view">
+    <div class="clearfix">
+        <h3 class="page-name">{[{ track.pl.requisits }]}</h3>
+    </div>
+    <div ng-include="'/static/html/ngtmp/v_info.html'"></div>
+
+
+    <div ng-include="'/static/html/ngtmp/v_basic.html'"></div>
+
+    <div ng-include="'/static/html/ngtmp/v_repeated.html'"></div>
+
+    <div ng-include="'/static/html/ngtmp/v_period.html'"></div>
+
+
+    <div class="col-xs-12 clearfix comment">
+        <div class="panel panel-default">
+            <div class="panel-heading">Коментар</div>
+            <div class="panel-body">{[{ track.pl.comment }]}</div>
         </div>
     </div>
-</div>
 
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Розробник регуляторного акта</div>
-        <div class="panel-body developer">
-            <div class="pull-left" inline-typehead="track.pl.act_developer" type-govs="govs.govs"
-                 on-save="saveData('SAVE', 'act_developer', value)" on-cancel="log('CANCEL', value)"></div>
-            </div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class=" panel-heading">Рішення Держпідприємництва щодо погодження</div>
-        <div class="panel-body" inline-edit="track.pl.government_choice" on-save="saveData('SAVE', 'government_choice', value)" on-cancel="log('CANCEL', value)"></div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix years">
-    <div class="panel panel-default">
-        <div class="panel-heading">Рік відстеження та параметри</div>
-        <div class="panel-body">
-            <div class="col-xs-2 pull-left">
-                <input type="text"
-                       ng-model="track.pl.year_of_tracing"
-                       placeholder="Рік відстеження"
-                       uib-typeahead="year for year in years"
-                       class="form-control"
-                       typeahead-min-length="0"
-                       typeahead-focus-on-select="true"
-                       typeahead-editable="false">
-            </div>
-            <div class="col-xs-1 pull-left heading">Базовий</div>
-            <switcher class="col-xs-1 pull-left" ng-model="track.pl.base" ng-change="saveData('SAVE', 'base', newValue, oldValue)"
-                      true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні"></switcher>
-            <div class="col-xs-1 pull-left heading">Повторний</div>
-            <switcher class="col-xs-1 pull-left" ng-model="track.pl.repeated" ng-change="saveData('SAVE', 'repeated', newValue, oldValue)"
-                      true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні" ></switcher>
-            <div class="col-xs-1 pull-left heading">Періодичний</div>
-            <switcher class="col-xs-1 pull-left" ng-model="track.pl.periodical" ng-change="saveData('SAVE', 'periodical', newValue, oldValue)"
-                      true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні" ></switcher>
-            <div class="col-xs-1 pull-left heading">Фактичний</div>
-            <switcher class="col-xs-1 pull-left" ng-model="track.pl.fact" ng-change="saveData('SAVE', 'fact', newValue, oldValue)"
-                      true-value="'1'" true-label="Так" false-value="'0'" false-label="Ні" ></switcher>
-        </div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Термін здійснення заходів з відстеження</div>
-        <div class="clearfix">
-            <div class="col-xs-2 pull-left panel-body">Базового</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.termin_basic"
-                 on-save="saveData('SAVE', 'termin_basic', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Повторного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.termin_periodical"
-                 on-save="saveData('SAVE', 'termin_periodical', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Періодичного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.termin_repeated"
-                 on-save="saveData('SAVE', 'termin_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Результати відстеження результативності</div>
-        <div class="clearfix">
-            <div style="border-bottom: 1px solid rgba(0, 0, 0, 0.32);overflow: hidden">
-                <div class="col-xs-1 pull-left panel-body" >Базового</div>
-                <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.result_basic"
-                     on-save="saveData('SAVE', 'result_basic', value)" on-cancel="log('CANCEL', value)"></div></div>
-            <div style="border-bottom: 1px solid rgba(0, 0, 0, 0.32);overflow: hidden">
-                <div class="col-xs-1 pull-left panel-body">Повторного</div>
-                <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.result_periodical"
-                     on-save="saveData('SAVE', 'result_periodical', value)" on-cancel="log('CANCEL', value)"></div></div>
-            <div class="col-xs-1 pull-left panel-body" >Періодичного</div>
-            <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.result_repeated"
-                 on-save="saveData('SAVE', 'result_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Дата підписання  звіту  про відстеження результативності регуляторного акта</div>
-        <div class="clearfix">
-            <div class="col-xs-2 pull-left panel-body">Базового</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.signation_basic"
-                 on-save="saveData('SAVE', 'signation_basic', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Повторного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.signation_periodical"
-                 on-save="saveData('SAVE', 'signation_periodical', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Періодичного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.signation_repeated"
-                 on-save="saveData('SAVE', 'signation_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Дата оприлюденення  звіту  про відстеження результативності регуляторного акта</div>
-        <div class="clearfix">
-            <div class="col-xs-2 pull-left panel-body">Базового</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.publication_basic"
-                 on-save="saveData('SAVE', 'publication_basic', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Повторного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.publication_periodical"
-                 on-save="saveData('SAVE', 'publication_periodical', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Періодичного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.publication_repeated"
-                 on-save="saveData('SAVE', 'publication_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Дата надання звіту  про відстеження результативності регуляторного акта до Держпідприємництва </div>
-        <div class="clearfix">
-            <div class="col-xs-2 pull-left panel-body">Базового</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.gived_basic"
-                 on-save="saveData('SAVE', 'gived_basic', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Повторного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.gived_periodical"
-                 on-save="saveData('SAVE', 'gived_periodical', value)" on-cancel="log('CANCEL', value)"></div>
-            <div class="col-xs-2 pull-left panel-body">Періодичного</div>
-            <div class="col-xs-2 pull-left panel-body" inline-date="track.pl.gived_repeated"
-                 on-save="saveData('SAVE', 'gived_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-
-<div class="col-xs-12 clearfix">
-    <div class="panel panel-default">
-        <div class="panel-heading">Висновок Комітету щодо відповідності звіту вимогам постанови КМУ від 11.03.04 р. №308</div>
-        <div class="clearfix">
-            <div style="border-bottom: 1px solid rgba(0, 0, 0, 0.32);overflow: hidden">
-            <div class="col-xs-1 pull-left panel-body" >Базового</div>
-            <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.conclusion_basic"
-                 on-save="saveData('SAVE', 'conclusion_basic', value)" on-cancel="log('CANCEL', value)"></div></div>
-            <div style="border-bottom: 1px solid rgba(0, 0, 0, 0.32);overflow: hidden">
-            <div class="col-xs-1 pull-left panel-body">Повторного</div>
-            <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.conclusion_periodical"
-                 on-save="saveData('SAVE', 'conclusion_periodical', value)" on-cancel="log('CANCEL', value)"></div></div>
-            <div class="col-xs-1 pull-left panel-body" >Періодичного</div>
-            <div class="col-xs-11 pull-left panel-body" inline-edit="track.pl.conclusion_repeated"
-                 on-save="saveData('SAVE', 'conclusion_repeated', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
-    </div>
-</div>
-
-<div class="col-xs-12 clearfix comment">
-    <div class="panel panel-default">
-        <div class=" panel-heading">Коментар</div>
-        <div class="panel-body" inline-comment="track.pl.comment" on-save="saveData('SAVE', 'comment', value)" on-cancel="log('CANCEL', value)"></div>
-    </div>
 </div>
