--- a/static/html/view.html
+++ b/static/html/view.html
@@ -1,6 +1,6 @@
 <div class="clearfix">
     <div class="edit-page">
-        <a href="edit/"><span class="glyphicon glyphicon-edit"></span></a>
+        <a href="{[{ editPath }]}"><span class="glyphicon glyphicon-edit"></span></a>
     </div>
     <div class="view-print">
         <a class="glyphicon glyphicon-print" ng-click="printDiv('track-view')"></a>
