user cabinet added

--- a/static/html/ratings.html
+++ b/static/html/ratings.html
@@ -6,15 +6,15 @@
 </div>
 <uib-tabset active="activeJustified" justified="true">
     <uib-tab index="0" heading="Якісні показники по ЦОВВ" >
-        <div ng-include="'/static/html/ratings1.html'"></div>
+        <div ng-include="'/static/html/ratings/ratings1.html'"></div>
     </uib-tab>
     <uib-tab index="1" heading="Додаток 10" select="reportName = ratings2">
-        <div ng-include="'/static/html/ratings2.html'"></div></uib-tab>
+        <div ng-include="'/static/html/ratings/ratings2.html'"></div></uib-tab>
     <uib-tab index="2" heading="Додатки 11 та 12" select="reportName = ratings3">
-        <div ng-include="'/static/html/ratings3.html'"></div>
+        <div ng-include="'/static/html/ratings/ratings3.html'"></div>
     </uib-tab>
     <uib-tab index="3" heading="Додаток 15" select="reportName = ratings4">
-        <div ng-include="'/static/html/ratings4.html'"></div>
+        <div ng-include="'/static/html/ratings/ratings4.html'"></div>
     </uib-tab>
 </uib-tabset>
 
