--- a/static/html/track/e_info.html
+++ b/static/html/track/e_info.html
@@ -26,16 +26,15 @@
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default">
         <div class="panel-heading">Розробник регуляторного акта</div>
-        <div class="panel-body developer">
-            <div class="pull-left" inline-typehead="track.pl.developer" type-govs="govs.govs"
+            <div class="panel-body developer" inline-typehead="track.pl.developer" type-govs="governs"
                  on-save="saveData('developer', value)" on-cancel="log('CANCEL', value)"></div>
-        </div>
+
     </div>
 </div>
 
 <div class="col-xs-12 clearfix">
     <div class="panel panel-default">
-        <div class=" panel-heading">Рішення Держпідприємництва щодо погодження</div>
+        <div class="panel-heading">Рішення Держпідприємництва щодо погодження</div>
         <div class="panel-body" inline-edit="track.pl.gov_choice" on-save="saveData('gov_choice', value)" on-cancel="log('CANCEL', value)"></div>
     </div>
 </div>
